--- a/_pages/dept/building_grounds/home.html
+++ b/_pages/dept/building_grounds/home.html
@@ -28,13 +28,13 @@ permalink: /building_grounds/
       <div class="panel-heading">
         <h3 class="panel-title text-center">Our Services</h3>
       </div>
-      <div class="list-group">
+      <ul class="list-group">
         <li class="list-group-item text-center">Housekeeping</li>
         <li class="list-group-item text-center">Building Maintenance</li>
         <li class="list-group-item text-center">Recycling</li>
         <li class="list-group-item text-center">Mail Retrieval and Delivery</li>
         <li class="list-group-item text-center">Snow Removal</li>
-      </div>
+      </ul>
     </div>
     <!-- End Services -->
   </div>
