--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -10,7 +10,7 @@ tree: true
     <div class="col-md-12">
       <div class="panel panel-primary">
         <figure style="float:left; padding:0.5em; margin-right:10px; ">
-          <img class="figure-img img-responsive rounded" style="width:350px; height:263px;" src={% cloudinary /img/commissioners.jpg %}</img>
+					{% cloudinary /img/commissioners.jpg class="figure-img img-responsive rounded" width="350" alt="Latah County Commissioners" %}
           <figcaption class="figure-caption text-center">
           Latah County Commissioners
         </figcaption>
@@ -36,7 +36,7 @@ tree: true
             <div id="comAgendas"></div>
           </div>
           <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
-            <div class="list-group pre-scrollable" id="agendas">
+            <div class="list-group pre-scrollable">
               <div id="agendas" class="list-group-item"></div>
               <noscript>To view agendas please enable JavaScript or update your browser</noscript>
             </div>
@@ -110,7 +110,7 @@ tree: true
 							<div id="comProclamations" class="list-group-item"></div>
 						</div>
 						<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false" style="height: 0px;">
-							<div class="list-group pre-scrollable" id="proclamations">
+							<div class="list-group pre-scrollable">
 								<div id="proclamations"></div>
 								<noscript>To view proclamations please enable JavaScript or update your browser</noscript>
 							</div>
