--- a/_pages/dept/court_assisstance/home.html
+++ b/_pages/dept/court_assisstance/home.html
@@ -153,8 +153,8 @@ tree: true
           <div class="list-group">
             <div id="caoDir"></div>
           </div>
-          <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
-            <div class="list-group pre-scrollable" id="forms">
+          <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
+            <div class="list-group pre-scrollable">
               <div id="forms" class="list-group-item"></div>
               <noscript>To view forms please enable JavaScript or update your browser</noscript>
             </div>
@@ -170,9 +170,9 @@ tree: true
         <div class="panel-heading">
           <h3 class="panel-title text-center">Our Services</h3>
         </div>
-        <div class="list-group">
+        <ul class="list-group">
           <li class="list-group-item text-center">Court Standard Forms and Instructions</li>
-        </div>
+        </ul>
       </div>
     </div><!-- <div class="col-md-4"> -->
   </div><!-- row -->
