--- a/_pages/dept/probation/home.html
+++ b/_pages/dept/probation/home.html
@@ -266,7 +266,7 @@ permalink: /probation/
       <div class="panel-heading">
         <h3 class="panel-title text-center">Our Services</h3>
       </div>
-      <div class="list-group">
+      <ul class="list-group">
         <li class="list-group-item text-center">Adult Misdemeanor Probation</li>
         <li class="list-group-item text-center">Juvenile Probation</li>
         <li class="list-group-item text-center">Mental Health Assessment and Treatment</li>
@@ -275,7 +275,7 @@ permalink: /probation/
         <li class="list-group-item text-center">Substance Abuse Assessment and Treatment</li>
         <li class="list-group-item text-center">Youth Advocacy</li>
         <li class="list-group-item text-center">Victim Offender Mediation</li>
-      </div>
+      </ul>
     </div>
     <!-- End Services -->
   </div>
