--- a/_pages/dept/weed_control/home.html
+++ b/_pages/dept/weed_control/home.html
@@ -127,11 +127,11 @@ permalink: /weed_control/
       <div class="panel-heading">
         <hd class="panel-title text-center">Our Services</hd>
       </div>
-      <div class="list-group text-center">
+      <ul class="list-group text-center">
         <li class="list-group-item">Inspecting Lands for Compliance</li>
         <li class="list-group-item">Checking for New Weed Invasions</li>
         <li class="list-group-item">Advising on Noxious Weed Control</li>
-      </div>
+      </ul>
     </div>
     <!-- End Services -->
   </div>
@@ -159,7 +159,7 @@ permalink: /weed_control/
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="bookRequest">
+            <h4 class="modal-title" id="book">
               Idaho Noxious Weed Book
             </h4>
           </div>
