--- a/_pages/dept/auditor/home.html
+++ b/_pages/dept/auditor/home.html
@@ -11,7 +11,7 @@ news: true
 		<div class="col-md-12">
 			<div class="panel panel-default">
 				<figure style="float:left; padding:0.5em; margin-right:10px; ">
-					<img class="figure-img img-responsive rounded" style="width:250px; height:300px;" src={% cloudinary /img/officials/HenrianneWestberg.png %}</img>
+					{% cloudinary /img/officials/HenrianneWestberg.png class="figure-img img-responsive rounded" width="250px" alt="Latah County Auditor"%}
 					<figcaption class="figure-caption text-center">Clerk Henrianne Westberg</figcaption>
 				</figure>
 				<p class="panel-body">
@@ -50,12 +50,12 @@ news: true
 			<div class="panel-heading">
 				<h3 class="panel-title text-center">Our Services</h3>
 			</div>
-			<div class="list-group">
+			<ul class="list-group">
 				<li class="list-group-item text-center">Deed Recording</li>
 				<li class="list-group-item text-center">Elections</li>
 				<li class="list-group-item text-center">Marriage License</li>
 				<li class="list-group-item text-center">Passports</li>
-			</div>
+			</ul>
 		</div>
 
 		<!-- additional information menu -->
