--- a/_pages/dept/district_court/home.html
+++ b/_pages/dept/district_court/home.html
@@ -40,13 +40,13 @@ permalink: /district_court/
       <div class="panel-heading">
         <h3 class="panel-title text-center">Our Services</h3>
       </div>
-      <div class="list-group">
+      <ul class="list-group">
         <li class="list-group-item text-center">Court Document Processing and Retention</li>
         <li class="list-group-item text-center">Clerk Services for Court Proceedings</li>
         <li class="list-group-item text-center">Accounting</li>
         <li class="list-group-item text-center">Juror Management</li>
         <li class="list-group-item text-center">Appeal Records Preparation</li>
-      </div>
+      </ul>
     </div>
     <!-- End Services -->
   </div>
