--- a/_pages/dept/dmv/home.html
+++ b/_pages/dept/dmv/home.html
@@ -45,11 +45,11 @@ news: true
       <div class="panel-heading">
         <h3 class="panel-title text-center">Our Services</h3>
       </div>
-      <div class="list-group">
+      <ul class="list-group">
         <li class="list-group-item text-center">Title Transfers & Registration</li>
         <li class="list-group-item text-center">Vehicle Identification Inspections</li>
         <li class="list-group-item text-center">Sales Tax Collection</li>
-      </div>
+      </ul>
     </div>
 
     <!-- additional information -->
