--- a/_pages/dept/driver_licensing/home.html
+++ b/_pages/dept/driver_licensing/home.html
@@ -48,13 +48,13 @@ permalink: /driver_licensing/
       <div class="panel-heading">
         <h3 class="panel-title text-center">Our Services</h3>
       </div>
-      <div class="list-group text-center">
+      <ul class="list-group text-center">
         <li class="list-group-item">Concealed Weapon Permit Photos</li>
         <li class="list-group-item">Drivers License Testing</li>
         <li class="list-group-item">Drivers License ID Cards</li>
         <li class="list-group-item">Drivers Education Permits</li>
         <li class="list-group-item">Fingerprinting</li>
-      </div>
+      </ul>
     </div>
     <!-- End Services -->
   </div>
