--- a/_pages/dept/parks_rec/home.html
+++ b/_pages/dept/parks_rec/home.html
@@ -115,9 +115,9 @@ permalink: /parks_rec/
       <div class="panel-heading">
         <h3 class="panel-title text-center">Our Services</h3>
       </div>
-      <div class="list-group text-center">
+      <ul class="list-group text-center">
         <li class="list-group-item">Parks Management</li>
-      </div>
+      </ul>
     </div>
     <!-- End Services -->
   </div>
