--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -24,11 +24,11 @@ util: true
   		<div class="panel-heading">
 				<h3 class="panel-title text-center">Our Services</h3>
 			</div>
-  		<div class="list-group text-center">
+  		<ul class="list-group text-center">
       	<li class="list-group-item">Mapping</li>
       	<li class="list-group-item">Building Permits</li>
       	<li class="list-group-item">Home Inspections</li>
-    	</div>
+    	</ul>
   	</div>
 	</div>
 </div>
@@ -44,7 +44,7 @@ util: true
 				<div id="pbDir" class="list-group-item"></div>
 			</div>
 			<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
-				<div class="list-group pre-scrollable" id="ordinances">
+				<div class="list-group pre-scrollable">
 					<div id="ordinances"></div>
 					<noscript>To view forms please enable JavaScript or update your browser</noscript>
 				</div>
