--- a/_pages/dept/prosecutor/home.html
+++ b/_pages/dept/prosecutor/home.html
@@ -11,7 +11,7 @@ permalink: /prosecutor/
     <div class="">
       <div class="panel panel-default">
         <figure style="float:left; padding:0.5em; margin-right:10px; ">
-					<img class="figure-img img-responsive rounded" style="width:250px; height:300px;" src={% cloudinary /img/officials/BillThompson.png %}</img>
+					{% cloudinary /img/officials/BillThompson.png class="figure-img img-responsive rounded" width="250" alt="Latah County Prosecutor" %}
 					<figcaption class="figure-caption text-center">Prosecutor Bill Thompson</figcaption>
 				</figure>
         <div class="panel-body text-justify">
@@ -37,11 +37,12 @@ permalink: /prosecutor/
                   <li>Idaho Department of Fish and Game</li>
                 </ul>
               </li>
-              <li>Juvenile cases regardless of the investigating agency.</li>
-              <ul>
-                <li>Child Protection cases</li>
-                <li>Involuntary mental hospitalizations</li>
-              </ul>
+              <li>Juvenile cases regardless of the investigating agency.
+                <ul>
+                  <li>Child Protection cases</li>
+                  <li>Involuntary mental hospitalizations</li>
+                </ul>
+              </li>
             </ul>
           </p>
           <p>
@@ -70,12 +71,12 @@ permalink: /prosecutor/
       <div class="panel-heading">
         <h3 class="panel-title text-center">Our Services</h3>
       </div>
-      <div class="list-group">
+      <ul class="list-group">
         <li class="list-group-item text-center">Child Protection Cases</li>
         <li class="list-group-item text-center">Involuntary Mental Hospitalizations</li>
         <li class="list-group-item text-center">Juvenile Cases</li>
         <li class="list-group-item text-center">Misdemeanor and Infractions Cases</li>
-      </div>
+      </ul>
     </div>
     <!-- End Services -->
   </div>
