--- a/_pages/dept/sheriff/home.html
+++ b/_pages/dept/sheriff/home.html
@@ -12,7 +12,7 @@ news: true
 		<div class="col-md-12">
 			<div class="panel panel-primary">
 				<figure style="float:left; padding:0.5em; margin-right:10px; ">
-					<img class="figure-img img-responsive rounded" style="width:250px; height:300px;" src={% cloudinary /img/officials/RichardSkiles.png %}</img>
+					{% cloudinary /img/officials/RichardSkiles.png class="figure-img img-responsive rounded" width="250" alt="Sheriff" %}
 					<figcaption class="figure-caption text-center">Sheriff Richard Skiles</figcaption>
 				</figure>
 				<p class="panel-body">
@@ -69,7 +69,7 @@ news: true
 					<div id="sheriffDir"></div>
 				</div>
 				<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
-					<div class="list-group pre-scrollable" id="forms">
+					<div class="list-group pre-scrollable">
 						<div id="forms" class="list-group-item"></div>
 						<noscript>To view forms please enable JavaScript or update your browser</noscript>
 					</div>
