--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -81,11 +81,11 @@ news: true
 			<div class="panel-heading">
 				<h3 class="panel-title text-center">Our Services</h3>
 			</div>
-			<div class="list-group">
+			<ul class="list-group">
 				<li class="list-group-item text-center">Manage Solid Waste Fees</li>
 				<li class="list-group-item text-center">Negotiates Contracts</li>
 				<li class="list-group-item text-center">Manages Billing and Collection</li>
-			</div>
+			</ul>
 		</div>
 
 
@@ -121,7 +121,7 @@ news: true
 				<div id="swDir"></div>
 			</div>
 			<div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
-				<div class="list-group pre-scrollable" id="forms">
+				<div class="list-group pre-scrollable">
 					<div id="forms" class="list-group-item"></div>
 					<noscript>To view forms please enable JavaScript or update your browser</noscript>
 				</div>
