--- a/_pages/dept/surveyor/home.html
+++ b/_pages/dept/surveyor/home.html
@@ -30,9 +30,9 @@ permalink: /surveyor/
       <div class="panel-heading">
         <h3 class="panel-title text-center">Our Services</h3>
       </div>
-      <div class="list-group">
+      <ul class="list-group">
         <li class="list-group-item">Plat Checking</li>
-        <li class="list-group-item">Land Division legal description approval</li>
+        <li class="list-group-item">Land ulision legal description approval</li>
         <li class="list-group-item">Corrections to legal descriptions for the Latah County Assessor's Office</li>
         <li class="list-group-item">Public assistance for private surveyors</li>
         <li class="list-group-item">Corner dispute and evidence evaluation</li>
