--- a/_pages/home.html
+++ b/_pages/home.html
@@ -50,50 +50,52 @@ news: true
       </div>
       <div class="panel-body">
         <ul class="list-group">
-          <ul class="list-group">
-            <li class="list-group-item">
-              <h4>Building Hours</h4>
-            </li>
-            <li class="list-group-item">
-              8:00 a.m. – 5:00 p.m. <br  />
-              M – F, except for recognized <a href="#holidays" data-toggle="modal">holidays</a>
-            </li>
-          </ul>
-          <ul class="list-group">
-            <li class="list-group-item">
-              <h4>Address</h4>
-            </li>
-            <li class="list-group-item text-center">
-              <strong>Latah County Courthouse</strong><br />
-              <address>
-                522 S Adams<br />
-                Moscow, ID 83843<br />
-              </address>
-            </li>
-            <li class="list-group-item text-center">
-              <strong>Latah County Annex</strong><br />
-              <address>
-                200 S Almon<br />
-                Moscow, ID 83843<br />
-              </address>
-            </li>
-            <li class="list-group-item text-center">
-              <button type="button" class="btn btn-default" data-toggle="modal" data-target="#mapBox">Map</button>
-            </li>
-          </ul>
-          <ul class="list-group">
-            <li class="list-group-item">
-              <h4>Social</h4>
-            </li>
-            <li class="list-group-item">
-              <div class="row text-center">
-                <a href="https://www.facebook.com/LatahCountyID/" target="_blank" rel="noopener" class="btn"><i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a>
-                <a href="#" target="_blank" rel="noopener" class="btn disabled"><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></a>
-                <a href="#" target="_blank" rel="noopener" class="btn disabled"><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a>
-                <a href="/contact/" class="btn"><i class="fa fa-2x fa-envelope" aria-hidden="true"></i></a>
-              </div>
-            </li>
-          </ul>
+          <li class="list-unstyled">
+            <ul class="list-group">
+              <li class="list-group-item">
+                <h4>Building Hours</h4>
+              </li>
+              <li class="list-group-item">
+                8:00 a.m. – 5:00 p.m. <br  />
+                M – F, except for recognized <a href="#holidays" data-toggle="modal">holidays</a>
+              </li>
+            </ul>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <h4>Address</h4>
+              </li>
+              <li class="list-group-item text-center">
+                <strong>Latah County Courthouse</strong><br />
+                <address>
+                  522 S Adams<br />
+                  Moscow, ID 83843<br />
+                </address>
+              </li>
+              <li class="list-group-item text-center">
+                <strong>Latah County Annex</strong><br />
+                <address>
+                  200 S Almon<br />
+                  Moscow, ID 83843<br />
+                </address>
+              </li>
+              <li class="list-group-item text-center">
+                <button type="button" class="btn btn-default" data-toggle="modal" data-target="#mapBox">Map</button>
+              </li>
+            </ul>
+            <ul class="list-group">
+              <li class="list-group-item">
+                <h4>Social</h4>
+              </li>
+              <li class="list-group-item">
+                <div class="row text-center">
+                  <a href="https://www.facebook.com/LatahCountyID/" target="_blank" rel="noopener" class="btn" aria-label="Link to Facebook page."><i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a>
+                  <a href="#" target="_blank" rel="noopener" class="btn disabled" aria-label="Link to Twitter page."><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></a>
+                  <a href="#" target="_blank" rel="noopener" class="btn disabled" aria-label="Link to Instagram page."><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a>
+                  <a href="/contact/" class="btn" aria-label="Link to contact page."><i class="fa fa-2x fa-envelope" aria-hidden="true"></i></a>
+                </div>
+              </li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
