linked commissioners additional information

--- a/_pages/dept/commissioners/home.html
+++ b/_pages/dept/commissioners/home.html
@@ -56,12 +56,12 @@ tree: true
 				<h4 class="panel-title text-center">Additional Information</h4>
 			</div>
   		<div class="list-group text-center">
-      	<a href="#" class="list-group-item" onclick="downloadFile('CommissionerDistricts.pdf'); return false;">Commissioner District Maps</a>
-        <a href="http://www.latah.id.us/mailman/listinfo/agendanotify" class="list-group-item">Agenda Notifications</a>
+      	<a href="#" class="list-group-item list-link" onclick="downloadFile('CommissionerDistricts.pdf'); return false;">Commissioner District Maps</a>
+        <a href="http://www.latah.id.us/mailman/listinfo/agendanotify" class="list-group-item list-link">Agenda Notifications</a>
         <!-- TODO: see gitlab issue #66 refactor agenda notifications to use mailgun or some other method other than mailmail on spanky -->
       	<!-- <a href="#myModal" data-toggle="modal" class="list-group-item">Agenda Notifications<noscript> - <small>You must enable Javascript or update your browser to view this content.</small></noscript></a> -->
-      	<a href="/assessor/" class="list-group-item">Tax Exempt Property Information</a>
-      	<a href="/commissions/#laws" class="list-group-item">Idaho Open Meeting Laws</a>
+      	<a href="/assessor/" class="list-group-item list-link">Tax Exempt Property Information</a>
+      	<a href="/commissions/#laws" class="list-group-item list-link">Idaho Open Meeting Laws</a>
 			</div>
   	</div>
   </div>
