--- a/_pages/dept/historical_society/home.html
+++ b/_pages/dept/historical_society/home.html
@@ -10,10 +10,10 @@ permalink: /historical_society/
 		<div class="panel panel-default">
 			<div class="panel-body text-justify">
 				<p>
-        	The Latah County Historical Society has offices and a research library at 327 East Second Street, Moscow. The telephone number is 882-1004 and the e-mail address for research inquires is dkersting. The research library is open Tuesday through Friday 9 AM to 5 PM.
+        	The Latah County Historical Society has offices and a research library at 327 East Second Street, Moscow. The telephone number is 208-882-1004 and the e-mail address for research inquires is dkersting. The research library is open Tuesday through Friday 9 AM to 5 PM.
       	</p>
 	      <p>
-	      	The historical society also operates the McConnell Mansion museum at 110 South Adams Street. Inquiries can be addressed to the historical society's office address; the telephone number is also 882-1004 and email inquiries can be sent to dkersting.
+	      	The historical society also operates the McConnell Mansion museum at 110 South Adams Street. Inquiries can be addressed to the historical society's office address; the telephone number is also 208-882-1004 and email inquiries can be sent to dkersting.
 				</p>
 				<p>
 					The museum is located in an 1886 house built by merchant, and later senator and Governor William J. McConnell. The ground floor has been restored and interpreted to time periods from the turn of the century to the 1930s. The second floor contains interpretative exhibits and a hands-on exhibit of activities for youth. The ground floor is accessible. Admission is free to members of the historical society; suggested donation for non-members is $2 for adults; $4 for family groups; children under 16 are free. The museum is open Tuesday through Saturday from 1 to 4 p.m. It is closed holidays. Tours can be arranged by contacting the historical society.
@@ -36,7 +36,7 @@ permalink: /historical_society/
 			<h4 class="panel-title text-center">Visit Our Website</h4>
 		</div>
   		<div class="list-group text-center">
-      	<a href="http://www.latahcountyhistoricalsociety.org/" rel="noopener" target="_blank" class="list-group-item">Latah County Historical Society Web Site</a>
+      	<a href="http://www.latahcountyhistoricalsociety.org/" class="list-group-item list-link" rel="noopener" target="_blank">Latah County Historical Society Web Site</a>
     	</div>
   	</div>
 	</div>
