--- a/_pages/dept/veterans_services/home.html
+++ b/_pages/dept/veterans_services/home.html
@@ -12,7 +12,10 @@ permalink: /veterans_services/
       <div class="panel panel-primary">
         <div class="panel-body text-justify">
           <p>
-            Providing assistance to veterans and dependents, under the direction of the County Commissioners, is the responsibility of this office. They assist, at no fee to the applicant, in the preparation of forms and supporting evidence to be submitted to the US Department of Veterans Affairs (VA) or the Idaho State Division of Veterans Service when applying for veterans benefits such as disability compensation and pensions, medical assistance, death claims and residency at the state veterans homes. The Spokane VA Medical Center Mobile Health Clinic is available for follow-up care in Moscow on a monthly basis; transportation is available for veterans with appointments at the VAMC on Wednesdays and Fridays. Office hours are Monday, Tuesday and Thursday 8:00–11:30 a.m. and 1:00–5:00 p.m. Alternate arrangements can be made if an applicant is unable to come in during these hours.
+            This office provides assistance to veterans and dependents, under the direction of the County Commissioners and the County Clerk. They assist, at no fee to the veteran, in the preparation of forms and supporting evidence to be submitted to the US Department of Veterans Affairs or the Idaho State Division of Veterans Service when applying for veterans’ benefits which include disability compensation, pensions, and medical and death benefits. Information is also provided on how to access the Spokane VA Medical Center and the Mobile Health Clinic. Call to make an appointment.
+          </p>
+          <p>
+            Office hours are 8:30 a.m. to 4:30 p.m.  Closed Noon to 1:00 p.m. Monday through Friday.
           </p>
         </div>
       </div>
