--- a/_pages/dept/sheriff/sales.html
+++ b/_pages/dept/sheriff/sales.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Sheriff Sales
-permalink: /sheriff/sales
+permalink: /sheriff/sales/
 tree: true
 ---
 
@@ -30,7 +30,7 @@ tree: true
           <div id="sheriffSalesDir"></div>
         </div>
         <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="height: 0px;">
-          <div class="list-group pre-scrollable" id="forms">
+          <div class="list-group pre-scrollable">
             <div id="forms" class="list-group-item"></div>
             <noscript>To view forms please enable JavaScript or update your browser</noscript>
           </div>
