--- a/_pages/dept/solid_waste/billing.html
+++ b/_pages/dept/solid_waste/billing.html
@@ -38,7 +38,7 @@ permalink: /solid_waste/billing
                   <td headers="febfee">$313.00</td>
                 </tr>
                 <tr class="thsubrow2">
-                  <td colspan="4" scope="rowgroup">
+                  <td colspan="4">
                     <br>
                     <p>
                       <strong>Non Payment:</strong> Late fees are added to delinquent accounts. Balances may be added  to property tax bill for collection (may affect mortgage payments).
@@ -46,14 +46,14 @@ permalink: /solid_waste/billing
                   </td>
                 </tr>
                 <tr class="thsubrow2">
-                  <td colspan="4" scope="rowgroup">
+                  <td colspan="4">
                     <p>
                       Cart Exchange $18.00 (After 60 day trial period)
                     </p>
                   </td>
                 </tr>
                 <tr class="thsubrow2">
-                  <td colspan="4" scope="rowgroup">
+                  <td colspan="4">
                     <p>
                       You will be billed a $5.00 fee for any waste outside the roll cart.
                     </p>
