--- a/_pages/dept/sheriff/jaildivision.html
+++ b/_pages/dept/sheriff/jaildivision.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Sheriff Jail Division
-permalink: /sheriff/jaildivision
+permalink: /sheriff/jaildivision/
 ---
 
 <div class="row">
