--- a/_pages/dept/sheriff/patrolDivision.html
+++ b/_pages/dept/sheriff/patrolDivision.html
@@ -13,7 +13,7 @@ permalink: /sheriff/patrolDivision
       </h4>
     </div>
 
-    <div id="collapse1" class="collapse">
+    <div id="collapse1" class="collapse in">
       <div class="panel-body">
         The Field Division is most commonly involved with citizen interaction both in the office and in the field. Much of this Division's work is done away from the Sheriff's Office.
         The statutory duties of the Sheriff's Office is clear and includes: Preserving the peace, arresting and taking before magistrates all those who commit or attempt to commit
