--- a/_pages/dept/sheriff/home.html
+++ b/_pages/dept/sheriff/home.html
@@ -111,13 +111,13 @@ news: true
 				<a href="emailNotification.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Email Notification Service</a>
 				<a href="generalfaq.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Sheriff General FAQ</a>
 				<a href="salesfaq.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Sheriff Sales FAQ</a>
-				<a href="jaildivision.html" data-remote="false" class="list-group-item list-link text-center">Jail Division</a>
+				<a href="jaildivision/" data-remote="false" class="list-group-item list-link text-center">Jail Division</a>
 				<a href="http://gis.latah.id.us/JailRoster/ListNames.aspx" class="list-group-item list-link text-center" target="_blank" rel="noopener">Jail Roster</a>
 				<a href="http://www.sheriffalerts.com/cap_main.php?office=55417" class="list-group-item list-link text-center" target="_blank" rel="noopener">Sex Offender Search</a>
 				<a href="patrolDivision.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Patrol Division</a>
 				<a href="records.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Records</a>
 				<a href="#" id=recordsRequest data-remote="false" class="list-group-item list-link text-center" onclick="downloadFile('Public-Records-Request-Form.pdf'); return false;">Records Request Form</a>
-				<a href="sales.html" data-remote="false" class="list-group-item list-link text-center">Sheriff Sales</a>
+				<a href="sales/" data-remote="false" class="list-group-item list-link text-center">Sheriff Sales</a>
 				<a href="https://www.vinelink.com/vinelink/siteInfoAction.do?siteId=13000" data-remote="false" class="list-group-item list-link text-center" target="_blank" rel="noopener">VINE (victim notification of offender custody status)</a>
 			</div>
 		</div>
