--- a/_pages/dept/veterans_services/home.html
+++ b/_pages/dept/veterans_services/home.html
@@ -32,8 +32,8 @@ permalink: /veterans_services/
         <h3 class="panel-title text-center">Additional Information</h3>
       </div>
       <div class="list-group text-center">
-        <a href="http://www.va.gov/" target="_blank" rel="noopener" class="list-group-item">U.S. Department of Veterans Affairs</a>
-        <a href="http://veterans.idaho.gov/" target="_blank" rel="noopener" class="list-group-item">Idaho State Veterans Services</a>
+        <a href="http://www.va.gov/" target="_blank" rel="noopener" class="list-group-item list-link">U.S. Department of Veterans Affairs</a>
+        <a href="http://veterans.idaho.gov/" target="_blank" rel="noopener" class="list-group-item list-link">Idaho State Veterans Services</a>
       </div>
     </div>
     <!-- End Services -->
