--- a/_pages/dept/treasurer/payments.html
+++ b/_pages/dept/treasurer/payments.html
@@ -26,7 +26,9 @@ permalink: /treasurer/payments
     <div class="panel-title">Bill Pay Checks</div>
   </div>
   <p class="panel-body">
-    We accept 'Bill Pay Checks' from your bank or credit union. For accurate posting you must indicate your FULL PARCEL NUMBER (up to 15 digits) in the area designated for the account number. Bill pay checks not properly identified will be returned. Click here for more detailed information.
+    We accept 'Bill Pay Checks' from your bank or credit union. For accurate posting you must indicate your FULL PARCEL NUMBER (up to 15 digits) in the area designated for the account number. Bill pay checks not properly identified will be returned. <br />
+    Your parcel number can be found in the upper right corner of your annual tax statement. Do NOT use your 'bill number' as your account number. Bill numbers change from year to year and can cause incorrect postings. Second: Use separate checks for multiple parcels. It is our office protocol to apply your payment as you indicate on your check. If your intention is to pay your mobile home but you indicate the real property parcel number we will apply the funds to the number provided. Third: You need only 4 things to set up your Bill Pay service; 1) the correct name for the "vendor", "biller" or "payee", which is: Latah County Tax Collector. 2) Our address: PO Box 8068, Moscow, Id 83843. 3) our phone number: 208-883-2296. And finally; the parcel number which can be up to 15 digits. Specific questions regarding setting up 'bill pay' can be directed to your bank or credit union. Sorry, we do NOT offer 'automatic payment deduction' for property taxes.<br />
+    <br />
     Mail payments to:
     <br><br>
     Latah County Tax Collector
