--- a/_pages/dept/treasurer/taxpaymentfaq.html
+++ b/_pages/dept/treasurer/taxpaymentfaq.html
@@ -15,7 +15,7 @@ permalink: /treasurer/taxpaymentfaq
 
     <div id="collapseFive" class="collapse">
       <div class="panel-body">
-        When preparing your check for payment, please take the extra time to verify that your amounts are correct, both the written and number portion. If you are paying multiple bills check your addition carefully. Delinquencies can occur because of math errors. Incorrectly written checks delay your tax payment as well as creating unnecessary hours of expensive research. The taxpayer is responsible for identifying each parcel of their property. Treasurer's office staff cannot guarantee the taxpayer that each parcel is paid when payment stubs are not included.
+        When preparing your check for payment, please take the extra time to verify that your amounts are correct, both the written and number portion. If you are paying multiple bills check your addition carefully. Delinquencies can occur because of math errors. Incorrectly written checks delay your tax payment as well as creating unnecessary hours of expensive research. The taxpayer is responsible for identifying each parcel of their property. Treasurer's office staff cannot guarantee the taxpayer that each parcel is paid when payment stubs are not included. Please include your phone number if not already on the check. 
       </div>
     </div>
   </div>
