--- a/_pages/dept/planning_building/home.html
+++ b/_pages/dept/planning_building/home.html
@@ -30,6 +30,47 @@ util: true
       	<li class="list-group-item">Home Inspections</li>
     	</ul>
   	</div>
+		<!-- Meeting Notice Signup -->
+
+			<div class="panel panel-primary">
+				<!-- Button trigger modal -->
+				<a href="#myModal" data-toggle="modal">
+						<p class="list-group-item list-link text-center">
+							<a href="http://www.latah.id.us/mailman/listinfo/planzone">Signup for Meeting Notices</a>
+						</p>					
+				</a>
+			</div>
+
+		<!-- Modal -->
+		<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <h4 class="modal-title" id="myModalLabel">Signup for Meeting Notices</h4>
+		      </div>
+		      <div class="modal-body">
+						<form name="subscribe" method="post" action="">
+							<p>
+								If you subscribe to this service you will receive an e-mail every time a Planning or Zoning Commission agenda is added or amended to this web site.
+							</p>
+							<p>
+								Please enter your e-mail address in the box below, select subscribe or unsubscribe and then select the Send Request button.
+							</p>
+							<p>
+								subscribe:<input type="radio" name="action" value="join" checked="">
+								unsubscribe: <input name="action" type="radio" value="leave">
+							</p>
+							E-mail Address: <input name="sAddr" type="text" size="35" value="">
+							<input type="submit" value="Send Request">
+						</form>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		      </div>
+		    </div>
+		  </div>
+		</div> -->
 	</div>
 </div>
 <!-- End Services -->
@@ -67,49 +108,8 @@ util: true
 		</div>
 	</div>
 	<!-- End Upcoming Events -->
-	<!-- Meeting Notice Signup -->
-	<div class="col-md-push-6 col-md-6 text-center">
-		<div class="panel panel-primary">
-			<!-- Button trigger modal -->
-			<a href="#myModal" data-toggle="modal">
-				<div class="panel-heading">
-					<h3 class="panel-title text-center">
-						Signup for Meeting Notices
-					</h3>
-				</div>
-			</a>
-		</div>
-	</div>
-	<!-- Modal -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-	  <div class="modal-dialog" role="document">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	        <h4 class="modal-title" id="myModalLabel">Signup for Meeting Notices</h4>
-	      </div>
-	      <div class="modal-body">
-					<form name="subscribe" method="post" action="">
-						<p>
-							If you subscribe to this service you will receive an e-mail every time a Planning or Zoning Commission agenda is added or amended to this web site.
-						</p>
-						<p>
-							Please enter your e-mail address in the box below, select subscribe or unsubscribe and then select the Send Request button.
-						</p>
-						<p>
-							subscribe:<input type="radio" name="action" value="join" checked="">
-							unsubscribe: <input name="action" type="radio" value="leave">
-						</p>
-						E-mail Address: <input name="sAddr" type="text" size="35" value="">
-						<input type="submit" value="Send Request">
-					</form>
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	      </div>
-	    </div>
-	  </div>
-	</div>
+
+
 	<!-- End Meeting Notice Signup -->
 </div>
 
