--- a/_pages/commissions/home.html
+++ b/_pages/commissions/home.html
@@ -64,8 +64,8 @@ permalink: /commissions/
           <div class="panel-body">
             <div class="col-md-8">
               <p>
-                The Latah County Planning Commission consists of 7 members who are appointed by the Latah County Board of Commissioners. These individuals review and recommend changes to the Latah County Comprehensive Plan and the Latah County Land Use Ordinance.
-              </p>              
+                The Latah County Zoning Commission consists of 5 members who are appointed by the Latah County Board of Commissioners. These individuals conduct public hearings for applications that are applied for under the Land Use Ordinance.
+              </p>
               <p>
                 To submit general comments to the Planning Commission, please e-mail <a href="mailto:mfuson@latah.id.us">Michelle Fuson</a>. To submit comments regarding a public hearing before the Zoning Commission, please refer to the public hearing packet below on how to submit comments.
                 To receive e-mails with links to new agendas for the Planning and Zoning Commissions please subscribe <a href="http://www.latah.id.us/mailman/listinfo/planzone">here</a>.
