--- a/_pages/home.html
+++ b/_pages/home.html
@@ -89,7 +89,7 @@ news: true
               <li class="list-group-item">
                 <div class="row text-center">
                   <a href="https://www.facebook.com/LatahCountyID/" target="_blank" rel="noopener" class="btn" aria-label="Link to Facebook page."><i class="fa fa-2x fa-facebook" aria-hidden="true"></i></a>
-                  <a href="#" target="_blank" rel="noopener" class="btn disabled" aria-label="Link to Twitter page."><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></a>
+                  <a href="https://twitter.com/LatahCountyID" target="_blank" rel="noopener" class="btn" aria-label="Link to Twitter page."><i class="fa fa-2x fa-twitter" aria-hidden="true"></i></a>
                   <a href="#" target="_blank" rel="noopener" class="btn disabled" aria-label="Link to Instagram page."><i class="fa fa-2x fa-instagram" aria-hidden="true"></i></a>
                   <a href="/contact/" class="btn" aria-label="Link to contact page."><i class="fa fa-2x fa-envelope" aria-hidden="true"></i></a>
                 </div>
