Fixes #77, Additional updates to Solid Waste pricing

--- a/_pages/dept/solid_waste/billing.html
+++ b/_pages/dept/solid_waste/billing.html
@@ -2,7 +2,7 @@
 permalink: /solid_waste/billing
 ---
 
-    <div class="panel panel-default" >
+    <div class="panel panel-primary" >
       <div class="panel-heading">
         <div class="panel-title">2018 Residential Solid Waste Fees</div>
       </div>
@@ -20,21 +20,21 @@ permalink: /solid_waste/billing
                 </tr>
                 <tr>
                   <td headers="servicelevel">35 gallon</td>
-                  <td headers="monthlyfee">$55.35</td>
-                  <td headers="annualfee">$221.40</td>
-                  <td headers="febfee">$216.40</td>
+                  <td headers="monthlyfee">$57.00</td>
+                  <td headers="annualfee">228.00</td>
+                  <td headers="febfee">$223.00</td>
                 </tr>
                 <tr>
                   <td headers="servicelevel">65 gallon</td>
-                  <td headers="monthlyfee">$67.50</td>
-                  <td headers="annualfee">$270.00</td>
-                  <td headers="febfee">$265.00</td>
+                  <td headers="monthlyfee">$69.75</td>
+                  <td headers="annualfee">$279.00</td>
+                  <td headers="febfee">$274.00</td>
                 </tr>
                 <tr>
                   <td headers="servicelevel">95 gallon</td>
-                  <td headers="monthlyfee">$79.50</td>
-                  <td headers="annualfee">$318.00</td>
-                  <td headers="febfee">$313.00</td>
+                  <td headers="monthlyfee">$83.25</td>
+                  <td headers="annualfee">$333.00</td>
+                  <td headers="febfee">$328.00</td>
                 </tr>
                 <tr class="thsubrow2">
                   <td colspan="4">
