--- a/_pages/dept/solid_waste/bulkywaste.html
+++ b/_pages/dept/solid_waste/bulkywaste.html
@@ -6,7 +6,7 @@ permalink: /solid_waste/bulkywaste
     <p>
       The Bulky Waste is a program for <b>FREE</b> disposal of Inert/Demolition Waste.  This includes furniture, mattresses, metal, tree stumps, branches, carpeting, roofing material and demolition waste (untreated lumber, concrete,  ceramic/porcelain, sheetrock) and up to 4 passenger tires and 2 appliances. <strong>Sites do not accept: E-waste, household waste, small appliances or any plastic items. </strong> All residential accounts should use weekly driveway service for household garbage. Users must log in with the applicable property address.
     </p>
-    <div class="panel panel-default" >
+    <div class="panel panel-primary" >
     <div class="panel-heading">
       <h2 class="panel-title">Bulky Wast Collection Sites</h2>
     </div>
