--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -10,7 +10,9 @@ news: true
 
 		<!-- Department Description -->
 		<div class="col-md-12">
-			<div class="alert alert-danger" role="alert">This site concerns RURAL county residences only. For assistance with a residence inside a city limit please call City Hall.
+			<div class="panel panel-primary">
+				<p class="panel-body">
+				<strong>This site concerns RURAL county residences only. For assistance with a residence inside a city limit please call City Hall.</strong>
 			</div>
 			<div class="panel panel-primary">
 				<p class="panel-body">
