--- a/_pages/dept/solid_waste/ruralrecycling.html
+++ b/_pages/dept/solid_waste/ruralrecycling.html
@@ -7,7 +7,7 @@ permalink: /solid_waste/ruralrecycling
         To encourage recycling Latah maintains a drop-off recycling program. When the boxes contain non-recyclable items they must be shipped 200 miles away at $77/ton. Please follow the guidelines below.
       </p>
 
-      <div class="panel panel-default" >
+      <div class="panel panel-primary" >
       <div class="panel-heading">
         <h2 class="panel-title">Locations of recycling boxes</h2>
       </div>
