Solid Waste updates.

--- a/_pages/dept/solid_waste/billing.html
+++ b/_pages/dept/solid_waste/billing.html
@@ -2,9 +2,9 @@
 permalink: /solid_waste/billing
 ---
 
-    <div class="panel panel-primary" >
+    <div class="panel panel-default" >
       <div class="panel-heading">
-        <div class="panel-title">2018 Residential Solid Waste Fees</div>
+        <div class="panel-title">2018 Residential Rates</div>
       </div>
       <div class="panel-body">        
         <p>(Rural Latah County serviced by Latah Sanitation)</p>
@@ -16,7 +16,7 @@ permalink: /solid_waste/billing
                   <th id="servicelevel" width="145">Roll Cart</th>
                   <th id="monthlyfee" width="155">Quarterly Fee</th>
                   <th id="annualfee" width="155">Annual Fee</th>
-                  <th id="febfee" width="155">Paid by Feb 10</th>
+                  <th id="febfee" width="155">Paid by Feb 16th</th>
                 </tr>
                 <tr>
                   <td headers="servicelevel">35 gallon</td>
@@ -62,3 +62,90 @@ permalink: /solid_waste/billing
             </table>
 
       </div>
+    </div>
+
+    <div class="panel panel-default" >
+        <div class="panel-heading">
+          <div class="panel-title">2018 Commercial Rates</div>
+        </div>
+        <div class="panel-body">                
+            <table style="margin-left: auto; margin-right: auto;" class="datatable2" cellspacing="0" cellpadding="3" width="100%">
+              <thead>
+                <tr>
+                  <th id="dumpstersize" width="130">Dumpster Size</th>
+                  <th id="quarterlyfee" width="130">Quarterly Fee</th>
+                  <th id="annualfee" width="130">Annual Fee</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td headers="dumpstersize">95-Gallon Cart</td>
+                  <td headers="quarterlyfee">$94.50</td>
+                  <td headers="annualfee">$378.00</td>
+                </tr>
+                <tr>
+                  <td headers="dumpstersize">1-Yard</td>
+                  <td headers="quarterlyfee">$190.50</td>
+                  <td headers="annualfee">$762.00</td>
+                </tr>
+                <tr>
+                  <td headers="dumpstersize">2-Yard</td>
+                  <td headers="quarterlyfee">$346.50</td>
+                  <td headers="annualfee">$1,386.00</td>
+                </tr>
+                <tr>
+                  <td headers="dumpstersize">3-Yard</td>
+                  <td headers="quarterlyfee">$504.45</td>
+                  <td headers="annualfee">$2,018.00</td>
+                </tr>
+                <tr>
+                  <td headers="dumpstersize">4-Yard</td>
+                  <td headers="quarterlyfee">$676.50</td>
+                  <td headers="annualfee">$2,706.00</td>
+                </tr>
+                <tr>
+                  <td headers="dumpstersize">6-Yard</td>
+                  <td headers="quarterlyfee">$958.50</td>
+                  <td headers="annualfee">$3,834.40</td>
+                </tr>
+              </tbody>
+            </table>
+        </div>
+      </div>
+
+      <div class="panel panel-default">
+          <div class="panel-heading">
+            <div class="panel-title">2018 Empire Residential Rates</div>
+          </div>
+          <div class=panel-body>
+            <table style="margin-left: auto; margin-right: auto;" width="100%" class="datatable2">
+                <tbody>
+                  <tr>
+                    <th id="servicelevel" width="155">Roll Cart</th>
+                    <th id="monthlyfee" width="155">Quarterly Fee</th>
+                    <th id="annualfee" width="155">Annual Fee</th>
+                    <th id="febfee" width="155">Paid by Feb 16th</th>
+                  </tr>
+                  <tr>
+                    <td headers="servicelevel">35 gallon can (owner provides)</td>
+                    <td headers="monthlyfee">$58.05</td>
+                    <td headers="annualfee">$232.20</td>
+                    <td headers="febfee">$227.20</td>
+                  </tr>
+                  <tr>
+                    <td headers="servicelevel">64 gallon</td>
+                    <td headers="monthlyfee">$70.80</td>
+                    <td headers="annualfee">$283.20</td>
+                    <td headers="febfee">$278.20</td>
+                  </tr>
+                  <tr>
+                    <td headers="servicelevel">90 gallon</td>
+                    <td headers="monthlyfee">$94.50</td>
+                    <td headers="annualfee">$378.00</td>
+                    <td headers="febfee">$373.00</td>
+                  </tr>              
+                </tbody>
+              </table>
+         </div>
+      </div>
+
