--- a/_pages/dept/solid_waste/commercialaccounts.html
+++ b/_pages/dept/solid_waste/commercialaccounts.html
@@ -9,7 +9,7 @@ permalink: /solid_waste/commercialaccounts
         <p>All commercial accounts are responsible for open access to the container to provide Latah Sanitation easy removal.   Latah County Solid Waste Department will not pay for overflow at your dumpster site.  If there is overflow you will be billed directly from Latah Sanitation.</p>
   </div>
 </div>
-      <div class="panel panel-primary" >
+      <div class="panel panel-default" >
         <div class="panel-heading">
           <div class="panel-title">2018 Rates</div>
         </div>
@@ -40,7 +40,7 @@ permalink: /solid_waste/commercialaccounts
                     </tr>
                     <tr>
                       <td headers="dumpstersize">3-Yard</td>
-                      <td headers="quarterlyfee">$504.50</td>
+                      <td headers="quarterlyfee">$504.45</td>
                       <td headers="annualfee">$2,018.00</td>
                     </tr>
                     <tr>
@@ -51,7 +51,7 @@ permalink: /solid_waste/commercialaccounts
                     <tr>
                       <td headers="dumpstersize">6-Yard</td>
                       <td headers="quarterlyfee">$958.50</td>
-                      <td headers="annualfee">$3,720.00</td>
+                      <td headers="annualfee">$3,834.40</td>
                     </tr>
                   </tbody>
                 </table>
