--- a/_pages/dept/solid_waste/empiredisposal.html
+++ b/_pages/dept/solid_waste/empiredisposal.html
@@ -2,14 +2,12 @@
 permalink: /solid_waste/empiredisposal
 ---
 
-<div class="panel panel-primary" >
+<div class="panel panel-default" >
   <div class="panel-body">
     <p>
-        Empire Disposal services Latah County accounts located in Farmington and the area north of Potlatch.  A 90-gallon tote is provided for waste disposal.  It must be placed within 5 feet of the county or state road by 5am on the scheduled service day.
-      </p>
-      <p>
-        Driveway service is for solid waste that fits in the 90-gallon tote.  Larger items must be hauled to a Bulky Waste Site or the Solid Waste Processing Facility.  All waste must be contained in the 90-gallon tote.
-      </p>
+        Empire Disposal services Latah County accounts located in Farmington and the area north of Potlatch. Carts must be placed within 5 feet of the county or state road by 5am on the scheduled service day.
+        Larger items must be hauled to a Bulky Waste Site or the Solid Waste Processing Facility.  
+   </p>
       <p>
         Waste should be neatly contained in garbage bags.  SHARPS waste must be in a secure, puncture-resistant container with remainder of garbage.
       </p>
@@ -22,9 +20,9 @@ permalink: /solid_waste/empiredisposal
       <p>
         Collectors will notify you if there is a change in the pickup schedule.  If roads are impassable, service will be on the next scheduled service date.  If you have any questions contact Latah County Solid Waste Department. <strong>The  Holiday Collection Schedule</strong> is printed in the Colfax Gazzette, or can be obtained from Empire Disposal at 509-397-3200.
       </p>
-      <div class="panel panel-primary">
+      <div class="panel panel-default">
           <div class="panel-heading">
-            <div class="panel-title">Fee and Payment Structure</div>
+            <div class="panel-title">2018 Empire Residential Rates</div>
           </div>
           <div class=panel-body>
             <table style="margin-left: auto; margin-right: auto;" width="100%" class="datatable2">
@@ -38,7 +36,7 @@ permalink: /solid_waste/empiredisposal
                   <tr>
                     <td headers="servicelevel">35 gallon can (owner provides)</td>
                     <td headers="monthlyfee">$58.05</td>
-                    <td headers="annualfee">232.20</td>
+                    <td headers="annualfee">$232.20</td>
                     <td headers="febfee">$227.20</td>
                   </tr>
                   <tr>
@@ -56,13 +54,12 @@ permalink: /solid_waste/empiredisposal
                 </tbody>
               </table>
          </div>
-
-      </div>
+      </div>      
       <p>
         Service fees are set by the Latah County Board of Commissioners.  Fees reflect charges incurred by Latah County.  The monthly service fee for a 90-gallon tote is $30.00 or $360.00 per year.  Empire Disposal will not provide volume-based pricing.
       </p>
       <p>
-        Payments are due by the 15th of the month.  Delinquent accounts are subject to late fees.  <strong>Monthly statements are not mailed for residential accounts.</strong>  Payment books and automatic bank deduction forms are available upon request.  Credit and debit card payments are accepted with a 3% service fee.
+        Payments are due by the 15th of the month.  Delinquent accounts are subject to late fees.  <strong>Monthly statements are NOT mailed for residential accounts.</strong>  Payment books and automatic bank deduction forms are available upon request.  Credit and debit card payments are accepted with a 2.5% service fee.
       </p>
       <p>
         Solid waste exemptions may be available if a home is vacant, non-livable, or used for storage. Applications may be obtained from the Latah County Solid Waste Office or downloaded from the Forms and Files section. <strong>An exemption must be applied for and approved in order to stop billing.</strong>
