--- a/_pages/dept/solid_waste/home.html
+++ b/_pages/dept/solid_waste/home.html
@@ -98,7 +98,7 @@ news: true
 				<h3 class="panel-title text-center">Additional Information</h3>
 			</div>
 			<div class="list-group">
-				<a href="billing.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Billing Procedures</a>
+				<a href="billing.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Billing Rates</a>
 				<a href="onlinepayments.html" data-remote="false" class="list-group-item list-link text-center" data-toggle="modal" data-target="#myModal">Online Payments</a>
 				<a href="bulkywaste.html" data-remote="false" class="list-group-item list-link text-center"  data-toggle="modal" data-target="#myModal">Bulky Waste</a>
 				<a href="commercialaccounts.html" data-remote="false" class="list-group-item list-link text-center"  data-toggle="modal" data-target="#myModal">Commercial Billing</a>
